--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 margin: 0 auto;
                 padding: 16px;
                 gap: 8px;
+                background: var(--bg);
             }
 
             main {
@@ -512,9 +513,7 @@
                 text-transform: uppercase;
                 letter-spacing: 0.1em;
                 color: var(--text-muted);
-                margin-top: 4px;
-                padding-top: 8px;
-                border-top: 1px solid var(--border);
+                margin-top: 6px;
             }
 
             .column-param .range-dash {
@@ -1083,10 +1082,10 @@
                         <input
                             type="range"
                             id="lfo1-rate"
-                            min="0.1"
-                            max="10"
-                            step="0.1"
-                            value="1"
+                            min="0"
+                            max="1"
+                            step="0.01"
+                            value="0.43"
                             data-tooltip="LFO 1 Rate (Hz)"
                         />
                         <span class="param-value" id="lfo1-rate-value"
@@ -1098,10 +1097,10 @@
                         <input
                             type="range"
                             id="lfo2-rate"
-                            min="0.1"
-                            max="10"
-                            step="0.1"
-                            value="1"
+                            min="0"
+                            max="1"
+                            step="0.01"
+                            value="0.43"
                             data-tooltip="LFO 2 Rate (Hz)"
                         />
                         <span class="param-value" id="lfo2-rate-value"
@@ -3934,6 +3933,9 @@
                             const freq =
                                 minFreq * Math.pow(maxFreq / minFreq, value);
                             this.audio.setFilterCutoff(freq);
+                            // Update slider position
+                            document.getElementById("filter-cutoff").value =
+                                freq;
                             // Update display
                             const display =
                                 freq >= 1000
@@ -4010,24 +4012,34 @@
                             this.morphMod.setOffset(parseFloat(e.target.value));
                         });
 
-                    // LFO rate controls
+                    // LFO rate controls (exponential: 0.05Hz - 10Hz)
+                    const lfoSliderToHz = (value) => {
+                        const minHz = 0.05;
+                        const maxHz = 10;
+                        return minHz * Math.pow(maxHz / minHz, value);
+                    };
+
                     document
                         .getElementById("lfo1-rate")
                         .addEventListener("input", (e) => {
-                            const value = parseFloat(e.target.value);
-                            this.modManager.setLfo1Rate(value);
+                            const hz = lfoSliderToHz(
+                                parseFloat(e.target.value),
+                            );
+                            this.modManager.setLfo1Rate(hz);
                             document.getElementById(
                                 "lfo1-rate-value",
-                            ).textContent = value.toFixed(1);
+                            ).textContent = hz.toFixed(hz < 1 ? 2 : 1);
                         });
                     document
                         .getElementById("lfo2-rate")
                         .addEventListener("input", (e) => {
-                            const value = parseFloat(e.target.value);
-                            this.modManager.setLfo2Rate(value);
+                            const hz = lfoSliderToHz(
+                                parseFloat(e.target.value),
+                            );
+                            this.modManager.setLfo2Rate(hz);
                             document.getElementById(
                                 "lfo2-rate-value",
-                            ).textContent = value.toFixed(1);
+                            ).textContent = hz.toFixed(hz < 1 ? 2 : 1);
                         });
 
                     // Filter modulation source selector
