fix: simplify modulation - range controls sweep, offset shifts it
- Range=1, Offset=0: sweeps full 0→1
- Range=0.5, Offset=0: sweeps 0→0.5 (bottom half)
- Range=0.5, Offset=1: sweeps 0.5→1 (top half)
- Range=0.5, Offset=0.5: sweeps 0.25→0.75 (centered)

Slider position only matters in Manual mode.

--- a/index.html
+++ b/index.html
@@ -3821,17 +3821,14 @@
                 }
 
                 // Called by ModulationManager with raw 0-1 value
-                // Modulates around baseValue: output swings from (baseValue - range/2) to (baseValue + range/2)
-                // Offset shifts this range up or down
+                // Range: how much of the 0-1 range to sweep (1 = full sweep)
+                // Offset: shifts the sweep upward (0 = starts at bottom, 1 = starts at top)
                 update(rawValue) {
-                    // rawValue is 0-1, convert to -0.5 to +0.5 for bipolar modulation
-                    const bipolar = rawValue - 0.5;
-                    // Scale by range and add to base value, then apply offset
-                    const modulated =
-                        this.baseValue +
-                        bipolar * this.range +
-                        (this.offset - 0.5) * this.range;
-                    const clamped = Math.max(0, Math.min(1, modulated));
+                    // rawValue is 0-1 from LFO sine wave
+                    // Scale by range, then shift by offset
+                    const scaled = rawValue * this.range;
+                    const shifted = scaled + this.offset * (1 - this.range);
+                    const clamped = Math.max(0, Math.min(1, shifted));
                     this.onChange(clamped);
                 }
 
