--- a/index.html
+++ b/index.html
@@ -4004,16 +4004,23 @@
                         });
 
                     // Morph modulation range and offset
-                    document
-                        .getElementById("morph-mod-range")
-                        .addEventListener("input", (e) => {
-                            this.morphMod.setRange(parseFloat(e.target.value));
-                        });
-                    document
-                        .getElementById("morph-mod-offset")
-                        .addEventListener("input", (e) => {
-                            this.morphMod.setOffset(parseFloat(e.target.value));
-                        });
+                    const morphModRange =
+                        document.getElementById("morph-mod-range");
+                    morphModRange.addEventListener("input", (e) => {
+                        const value = parseFloat(e.target.value);
+                        this.morphMod.setRange(value);
+                        e.target.dataset.tooltip = `Range: ${Math.round(value * 100)}%`;
+                    });
+                    morphModRange.dataset.tooltip = `Range: ${Math.round(morphModRange.value * 100)}%`;
+
+                    const morphModOffset =
+                        document.getElementById("morph-mod-offset");
+                    morphModOffset.addEventListener("input", (e) => {
+                        const value = parseFloat(e.target.value);
+                        this.morphMod.setOffset(value);
+                        e.target.dataset.tooltip = `Offset: ${Math.round(value * 100)}%`;
+                    });
+                    morphModOffset.dataset.tooltip = `Offset: ${Math.round(morphModOffset.value * 100)}%`;
 
                     // LFO rate controls (exponential: 0.05Hz - 10Hz)
                     const lfoSliderToHz = (value) => {
@@ -4053,20 +4060,24 @@
                         });
 
                     // Filter modulation range
-                    document
-                        .getElementById("filter-mod-range")
-                        .addEventListener("input", (e) => {
-                            this.filterMod.setRange(parseFloat(e.target.value));
-                        });
+                    const filterModRange =
+                        document.getElementById("filter-mod-range");
+                    filterModRange.addEventListener("input", (e) => {
+                        const value = parseFloat(e.target.value);
+                        this.filterMod.setRange(value);
+                        e.target.dataset.tooltip = `Range: ${Math.round(value * 100)}%`;
+                    });
+                    filterModRange.dataset.tooltip = `Range: ${Math.round(filterModRange.value * 100)}%`;
 
                     // Filter modulation offset
-                    document
-                        .getElementById("filter-mod-offset")
-                        .addEventListener("input", (e) => {
-                            this.filterMod.setOffset(
-                                parseFloat(e.target.value),
-                            );
-                        });
+                    const filterModOffset =
+                        document.getElementById("filter-mod-offset");
+                    filterModOffset.addEventListener("input", (e) => {
+                        const value = parseFloat(e.target.value);
+                        this.filterMod.setOffset(value);
+                        e.target.dataset.tooltip = `Offset: ${Math.round(value * 100)}%`;
+                    });
+                    filterModOffset.dataset.tooltip = `Offset: ${Math.round(filterModOffset.value * 100)}%`;
 
                     // Filter controls
                     const filterCutoff =
